include/dss_capi.h

    /*! 
    Array of strings containing all RegControl names
    */
    DSS_CAPI_DLL void RegControls_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    CT primary ampere rating (secondary is 0.2 amperes)
    */
    DSS_CAPI_DLL double RegControls_Get_CTPrimary(void);
    /*! 
    Time delay [s] after arming before the first tap change. Control may reset before actually changing taps.
    */
    DSS_CAPI_DLL double RegControls_Get_Delay(void);
    /*! 
    Sets the first RegControl active. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t RegControls_Get_First(void);
    /*! 
    Regulation bandwidth in forward direction, centered on Vreg
    */
    DSS_CAPI_DLL double RegControls_Get_ForwardBand(void);
    /*! 
    LDC R setting in Volts
    */
    DSS_CAPI_DLL double RegControls_Get_ForwardR(void);
    /*! 
    Target voltage in the forward direction, on PT secondary base.
    */
    DSS_CAPI_DLL double RegControls_Get_ForwardVreg(void);
    /*! 
    LDC X setting in Volts
    */
    DSS_CAPI_DLL double RegControls_Get_ForwardX(void);
    /*! 
    Time delay is inversely adjusted, proportional to the amount of voltage outside the regulating band.
    */
    DSS_CAPI_DLL uint16_t RegControls_Get_IsInverseTime(void);
    /*! 
    Regulator can use different settings in the reverse direction.  Usually not applicable to substation transformers.
    */
    DSS_CAPI_DLL uint16_t RegControls_Get_IsReversible(void);
    /*! 
    Maximum tap change per iteration in STATIC solution mode. 1 is more realistic, 16 is the default for a faster solution.
    */
    DSS_CAPI_DLL int32_t RegControls_Get_MaxTapChange(void);
    /*! 
    Name of a remote regulated bus, in lieu of LDC settings
    */
    DSS_CAPI_DLL const char* RegControls_Get_MonitoredBus(void);
    /*! 
    Get/set Active RegControl  name
    */
    DSS_CAPI_DLL const char* RegControls_Get_Name(void);
    /*! 
    Sets the next RegControl active. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t RegControls_Get_Next(void);
    /*! 
    PT ratio for voltage control settings
    */
    DSS_CAPI_DLL double RegControls_Get_PTratio(void);
    /*! 
    Bandwidth in reverse direction, centered on reverse Vreg.
    */
    DSS_CAPI_DLL double RegControls_Get_ReverseBand(void);
    /*! 
    Reverse LDC R setting in Volts.
    */
    DSS_CAPI_DLL double RegControls_Get_ReverseR(void);
    /*! 
    Target voltage in the revese direction, on PT secondary base.
    */
    DSS_CAPI_DLL double RegControls_Get_ReverseVreg(void);
    /*! 
    Reverse LDC X setting in volts.
    */
    DSS_CAPI_DLL double RegControls_Get_ReverseX(void);
    /*! 
    Time delay [s] for subsequent tap changes in a set. Control may reset before actually changing taps.
    */
    DSS_CAPI_DLL double RegControls_Get_TapDelay(void);
    /*! 
    Tapped winding number
    */
    DSS_CAPI_DLL int32_t RegControls_Get_TapWinding(void);
    /*! 
    Name of the transformer this regulator controls
    */
    DSS_CAPI_DLL const char* RegControls_Get_Transformer(void);
    /*! 
    First house voltage limit on PT secondary base.  Setting to 0 disables this function.
    */
    DSS_CAPI_DLL double RegControls_Get_VoltageLimit(void);
    /*! 
    Winding number for PT and CT connections
    */
    DSS_CAPI_DLL int32_t RegControls_Get_Winding(void);
    DSS_CAPI_DLL int32_t RegControls_Get_TapNumber(void);
    /*! 
    CT primary ampere rating (secondary is 0.2 amperes)
    */
    DSS_CAPI_DLL void RegControls_Set_CTPrimary(double Value);
    /*! 
    Time delay [s] after arming before the first tap change. Control may reset before actually changing taps.
    */
    DSS_CAPI_DLL void RegControls_Set_Delay(double Value);
    /*! 
    Regulation bandwidth in forward direction, centered on Vreg
    */
    DSS_CAPI_DLL void RegControls_Set_ForwardBand(double Value);
    /*! 
    LDC R setting in Volts
    */
    DSS_CAPI_DLL void RegControls_Set_ForwardR(double Value);
    /*! 
    Target voltage in the forward direction, on PT secondary base.
    */
    DSS_CAPI_DLL void RegControls_Set_ForwardVreg(double Value);
    /*! 
    LDC X setting in Volts
    */
    DSS_CAPI_DLL void RegControls_Set_ForwardX(double Value);
    /*! 
    Time delay is inversely adjusted, proportional to the amount of voltage outside the regulating band.
    */
    DSS_CAPI_DLL void RegControls_Set_IsInverseTime(uint16_t Value);
    /*! 
    Regulator can use different settings in the reverse direction.  Usually not applicable to substation transformers.
    */
    DSS_CAPI_DLL void RegControls_Set_IsReversible(uint16_t Value);
    /*! 
    Maximum tap change per iteration in STATIC solution mode. 1 is more realistic, 16 is the default for a faster solution.
    */
    DSS_CAPI_DLL void RegControls_Set_MaxTapChange(int32_t Value);
    /*! 
    Name of a remote regulated bus, in lieu of LDC settings
    */
    DSS_CAPI_DLL void RegControls_Set_MonitoredBus(const char* Value);
    /*! 
    Sets a RegControl active by name
    */
    DSS_CAPI_DLL void RegControls_Set_Name(const char* Value);
    /*! 
    PT ratio for voltage control settings
    */
    DSS_CAPI_DLL void RegControls_Set_PTratio(double Value);
    /*! 
    Bandwidth in reverse direction, centered on reverse Vreg.
    */
    DSS_CAPI_DLL void RegControls_Set_ReverseBand(double Value);
    /*! 
    Reverse LDC R setting in Volts.
    */
    DSS_CAPI_DLL void RegControls_Set_ReverseR(double Value);
    /*! 
    Target voltage in the revese direction, on PT secondary base.
    */
    DSS_CAPI_DLL void RegControls_Set_ReverseVreg(double Value);
    /*! 
    Reverse LDC X setting in volts.
    */
    DSS_CAPI_DLL void RegControls_Set_ReverseX(double Value);
    /*! 
    Time delay [s] for subsequent tap changes in a set. Control may reset before actually changing taps.
    */
    DSS_CAPI_DLL void RegControls_Set_TapDelay(double Value);
    /*! 
    Tapped winding number
    */
    DSS_CAPI_DLL void RegControls_Set_TapWinding(int32_t Value);
    /*! 
    Name of the transformer this regulator controls
    */
    DSS_CAPI_DLL void RegControls_Set_Transformer(const char* Value);
    /*! 
    First house voltage limit on PT secondary base.  Setting to 0 disables this function.
    */
    DSS_CAPI_DLL void RegControls_Set_VoltageLimit(double Value);
    /*! 
    Winding number for PT and CT connections
    */
    DSS_CAPI_DLL void RegControls_Set_Winding(int32_t Value);
    /*! 
    Integer number of the tap that the controlled transformer winding is currently on.
    */
    DSS_CAPI_DLL void RegControls_Set_TapNumber(int32_t Value);
    /*! 
    Number of RegControl objects in Active Circuit
    */
    DSS_CAPI_DLL int32_t RegControls_Get_Count(void);
    DSS_CAPI_DLL void RegControls_Reset(void);